# pytest-checklist

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  MAINTAINER.md  README.md  hatch.toml  lefthook.yaml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yaml  on-release.yml
old_tests/: test_plugin.py
src/pytest_checklist/: app.py  collector.py  defaults.py  path_utils.py  plugin.py  pointer.py  report.py
src/pytest_pointers/: app.py  collector.py  defaults.py  plugin.py  pointer.py  report.py  utils.py
test_data/resolve_fq_targets/mymodule/: other.py
test_data/resolve_fq_targets/mymodule/cases/: decorators.py  ignored.py  multiclass_same_method.py
tests/: conftest.py  test_app.py  test_collector.py  test_data.py  test_pointer.py  test_utils.py
tests/test_collector/resolve_fq_targets/mymodule/cases/: async_methods.py  multi_methods.py
