[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-pointers"
dynamic = ["version"]

description = "Pytest plugin to trach and report unit coverage."
readme = 'README.md'
license = "MIT"

authors = [
        { name = "Jack Klimov" },
        { name = "Samuel Lotz", email = "salotz@salotz.info"},
]
maintainers = [
        { name = "Samuel Lotz", email = "salotz@salotz.info"},
]
keywords = ['plugin', 'pytest', 'unit test']

dependencies = [
    "rich",
    "libcst",
]

[project.urls]

repository = "https://github.com/examol-corp/pytest-pointers"
homepage = "https://github.com/examol-corp/pytest-pointers"


[project.entry-points."pytest11"]
plugin = "pytest_pointers.plugin"
