[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-checklist"
dynamic = ["version"]

description = "Pytest plugin to track and report unit/function coverage."
readme = 'README.md'
license = "MIT"

authors = [
        { name = "Samuel Lotz", email = "salotz@salotz.info"},
        { name = "Jack Klimov" },
]
maintainers = [
        { name = "Samuel Lotz", email = "salotz@salotz.info"},
]
keywords = ['plugin', 'pytest', 'unit test']

requires-python = ">=3.9"
dependencies = [
    "rich",
    "libcst",
]

[project.urls]

repository = "https://github.com/examol-corp/pytest-checklist"
homepage = "https://github.com/examol-corp/pytest-checklist"


[project.entry-points."pytest11"]
plugin = "pytest_checklist.plugin"
